--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <canvas id="canvas" width="300" height="450"></canvas>
+    <div id="wrap" style="width: 300px; height: 100px; border: solid black 1px;"></div>
     <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
