--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <canvas id="canvas" width="300" height="450"></canvas>
-    <div id="wrap" style="width: 300px; height: 100px; border: solid black 1px;"></div>
+    <div id="wrap" style="width: 300px; height: 70px; border: solid black 1px;">
+      <div id="level" style="width: 50%; height: 100%; border: solid black 1px;  box-sizing: border-box; float: left;"></div>
+      <div id="timer" style="width: 50%; height: 100%; border: solid black 1px;  box-sizing: border-box;  float: left;"></div>
+
+    </div>
+    <script type="text/javascript" src="levels.js"></script>
     <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
