--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div id="timer" style="width: 50%; height: 100%; border: solid black 1px;  box-sizing: border-box;  float: left;"></div>
 
     </div>
+    <audio src="blup.mp3" id="blup"></audio>
     <script type="text/javascript" src="levels.js"></script>
     <script src="main.js" charset="utf-8"></script>
   </body>
